fixed link spacing

--- a/src/Pages/Contact/ContactStyles.scss
+++ b/src/Pages/Contact/ContactStyles.scss
@@ -31,6 +31,7 @@
       #StravaIcon {
         height: 75px;
         width: 150px;
+        padding-left: 5px;
       }
 
       #RWGPSIcon {
